--- a/index.html
+++ b/index.html
@@ -8,32 +8,38 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #f0f8ff;
-            padding: 20px;
+            padding: 10px;
+        }
+        h1, p {
+            text-align: center;
         }
         .question-container {
             background-color: #ffffff;
             border: 1px solid #ccc;
             border-radius: 10px;
-            padding: 20px;
-            margin: 20px auto;
-            width: 400px;
+            padding: 15px;
+            margin: 10px auto;
+            width: 90%;
+            max-width: 500px;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
             text-align: center;
+            font-size: 1.2em;
         }
         .choices {
-            margin-top: 15px;
+            margin-top: 10px;
         }
         .choice-btn {
             display: block;
             width: 100%;
-            padding: 10px;
-            margin: 5px 0;
+            padding: 12px;
+            margin: 8px 0;
             background-color: #007bff;
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
             transition: background-color 0.3s;
+            font-size: 1em;
         }
         .choice-btn:hover {
             background-color: #0056b3;
@@ -51,13 +57,14 @@
         #shuffle-button {
             display: block;
             margin: 20px auto;
-            padding: 10px 20px;
+            padding: 12px 20px;
             background-color: #28a745;
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
             transition: background-color 0.3s;
+            font-size: 1.1em;
         }
         #shuffle-button:hover {
             background-color: #218838;
@@ -65,13 +72,15 @@
     </style>
 </head>
 <body>
+
     <h1>Adjective Endings Practice (Prototype)</h1>
     <p>Select the correct adjective ending to complete the sentence.</p>
 
     <!-- Shuffle Button -->
     <button id="shuffle-button">Shuffle Questions 🔀</button>
 
-<div id="questions-container">
+    <!-- Container for questions -->
+    <div id="questions-container">
 
 <div class="question-container" id="question1">
     <p><strong>Wir kaufen einen ____ Tisch.</strong> (modern)</p>
@@ -1180,24 +1189,18 @@
 
 
 
-</div>
+ </div>
 
-
-
-
-
-
-     <script>
-        // Shuffle button click event
+    <!-- JavaScript -->
+    <script>
         document.getElementById('shuffle-button').addEventListener('click', shuffleQuestions);
 
         function shuffleQuestions() {
             const container = document.getElementById('questions-container');
-            const questions = Array.from(container.children);  // Get all question divs
-            const shuffled = questions.sort(() => Math.random() - 0.5);  // Shuffle array
+            const questions = Array.from(container.children);
+            const shuffled = questions.sort(() => Math.random() - 0.5);
 
-            // Clear and re-append shuffled divs
-            container.innerHTML = '';
+            container.innerHTML = '';  // Clear the container
             shuffled.forEach(question => container.appendChild(question));
         }
 
@@ -1211,5 +1214,6 @@
             }
         }
     </script>
+
 </body>
 </html>
