--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <title>Artikel & Adjektivendungen – Trainer</title>
-
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
 
+<body>
   <header class="page-header">
     <h1>Artikel & Adjektivendungen</h1>
     <p>Wählen Sie die richtige Form (Artikel/Endung), um den Satz zu vervollständigen.</p>
@@ -29,7 +27,7 @@
     </select>
   </div>
 
-  <!-- Optional: place for global info (leave empty for now) -->
+  <!-- Optional: global info (can stay empty) -->
   <div id="meta-bar" class="meta-bar" aria-live="polite"></div>
 
   <!-- Questions -->
@@ -42,28 +40,26 @@
     <p id="final-feedback"></p>
   </section>
 
+  <!-- Grammar modal -->
+  <div id="grammar-modal" class="modal" aria-hidden="true">
+    <div class="modal__backdrop" data-close="1"></div>
 
-<div id="grammar-modal" class="modal" aria-hidden="true">
-  <div class="modal__backdrop" data-close="1"></div>
+    <div class="modal__card" role="dialog" aria-modal="true" aria-labelledby="modal-title">
+      <div class="modal__header">
+        <h3 id="modal-title" class="modal__title">Regeln</h3>
+        <button class="modal__close" type="button" data-close="1" aria-label="Close">✕</button>
+      </div>
 
-  <div class="modal__card" role="dialog" aria-modal="true" aria-labelledby="modal-title">
-    <div class="modal__header">
-      <h3 id="modal-title" class="modal__title">Akkusativ – Regeln</h3>
-      <button class="modal__close" type="button" data-close="1" aria-label="Close">✕</button>
-    </div>
+      <div id="grammar-content" class="modal__body">
+        <!-- filled by JS -->
+      </div>
 
-    <div id="grammar-content" class="modal__body">
-      <!-- filled by JS -->
-    </div>
-
-    <div class="modal__footer">
-      <button class="modal__ok" type="button" data-close="1">OK</button>
+      <div class="modal__footer">
+        <button class="modal__ok" type="button" data-close="1">OK</button>
+      </div>
     </div>
   </div>
-</div>
-  
-  <!-- App logic -->
-  <script src="app.js" defer></script>
 
+  <script src="app.js" defer></script>
 </body>
 </html>
