--- a/index.html
+++ b/index.html
@@ -1,50 +1,1 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Deutsch Trainer</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <header class="page-header">
-    <h1>Artikel & Adjektivendungen</h1>
-    <p>Vervollständigen Sie die Sätze.</p>
-  </header>
-
-  <div class="meta-bar">
-    <div class="language-picker">
-      <label for="language-select">Hilfssprache:</label>
-      <select id="language-select">
-        <option value="en">English</option>
-        <option value="uk">Ukrainian</option>
-      </select>
-    </div>
-  </div>
-
-  <main id="questions-container"></main>
-
-  <section id="score-display" class="score-card" hidden>
-    <h2>Runde beendet</h2>
-    <p id="final-score"></p>
-    <div id="final-feedback"></div>
-    <button onclick="location.reload()" class="retry-btn">🔄 Neue Runde</button>
-  </section>
-
-  <div id="grammar-modal" class="modal" aria-hidden="true">
-    <div class="modal__backdrop" data-close="1"></div>
-    <div class="modal__card">
-      <div class="modal__header">
-        <h3 id="modal-title">Regeln</h3>
-        <button class="modal__close" data-close="1">✕</button>
-      </div>
-      <div id="grammar-content" class="modal__body"></div>
-      <div class="modal__footer">
-        <button data-close="1">Schließen</button>
-      </div>
-    </div>
-  </div>
-
-  <script src="app.js"></script>
-</body>
-</html>
+<!DOCTYPE html> <html lang="de"> <head> <meta charset="UTF-8" /> <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <title>Artikel & Adjektivendungen – Trainer</title> <link rel="stylesheet" href="styles.css" /> </head> <body> <header class="page-header"> <h1>Artikel & Adjektivendungen</h1> <p>Wählen Sie die richtige Form (Artikel/Endung), um den Satz zu vervollständigen.</p> </header> <!-- Try Again Button --> <button id="try-again-button" class="try-again-btn" type="button" hidden> 🔄 Versuchen Sie es erneut </button> <!-- Language selection --> <div class="language-bar"> <label for="language-select">Hilfssprache:</label> <select id="language-select"> <option value="en">Englisch</option> <option value="uk">Ukrainisch</option> </select> </div> <!-- Optional: global info (can stay empty) --> <div id="meta-bar" class="meta-bar" aria-live="polite"></div> <!-- Questions --> <main id="questions-container"></main> <!-- Score Display --> <section id="score-display" class="score" hidden aria-live="polite"> <h2>Runde abgeschlossen 🎉</h2> <p id="final-score"></p> <p id="final-feedback"></p> </section> <!-- Grammar modal --> <div id="grammar-modal" class="modal" aria-hidden="true"> <div class="modal__backdrop" data-close="1"></div> <div class="modal__card" role="dialog" aria-modal="true" aria-labelledby="modal-title"> <div class="modal__header"> <h3 id="modal-title" class="modal__title">Regeln</h3> <button class="modal__close" type="button" data-close="1" aria-label="Close">✕</button> </div> <div id="grammar-content" class="modal__body"> <!-- filled by JS --> </div> <div class="modal__footer"> <button class="modal__ok" type="button" data-close="1">OK</button> </div> </div> </div> <script src="app.js" defer></script> </body> </html>
